fix collapsible-visible max-height

--- a/src/Scenes/Lobby/Style/GameOptionsEditor.css
+++ b/src/Scenes/Lobby/Style/GameOptionsEditor.css
@@ -24,7 +24,7 @@
 }
 
 .game-options-group .collapsible-visible {
-    max-height: 28em;
+    max-height: 32em;
 }
 
 .game-options-group label {
